# feiqiu-communication

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  CLAUDE.md  Cargo.toml  Cargo.toml.new  IMPLEMENTATION_PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  Tauri2.0 内网通讯软件功能规划.md  bunfig.toml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  打造基于 Tauri2.0 的内网通讯软件.md
.github/workflows/: coverage.yml  frontend.yml  rust.yml
.husky/: pre-commit
.sisyphus/: boulder.json
.sisyphus/notepads/group-chat-implementation/: COMPLETE_FEATURE_REPORT.md  ENHANCEMENTS_REPORT.md  FINAL_SESSION_REPORT.md  FINAL_STATUS_REPORT.md  GROUP_SETTINGS_UI_SUMMARY.md  MANUAL_TESTING_CHECKLIST.md  MEMBER_MANAGEMENT_UI_SUMMARY.md  QUICK_TEST_GUIDE.md  SESSION_SUMMARY.md  completion-report.md  implementation-plan.md  issues.md  progress.md
.sisyphus/notepads/phase10-v1.1-features/: issues.md  learnings.md
.sisyphus/notepads/phase6-file-transfer/: SESSION_SUMMARY.md  TESTING_PLAN.md  learnings.md
.sisyphus/notepads/phase7-step3/: learnings.md
.sisyphus/notepads/phase9-release-prep/: TASK_LIST.md  learnings.md
.sisyphus/notepads/refactor-analysis/: architecture-analysis.md  架构分析报告.md
.sisyphus/notepads/refactor-execution/: ci-cd-setup.md  decisions.md  event-system-design.md  issues.md  learnings.md  session-summary.md  test-plan.md  test-results.md
.sisyphus/notepads/refactor-plan/: 重构计划.md
.sisyphus/notepads/udp-socket-refactor/: EVIDENCE.md  SUMMARY.md  TASK8_VERIFICATION.md  learnings.md
.sisyphus/plans/: phase10-v1.1-features.md  udp-socket-refactor.md
docs/: FAQ.md  Phase1_完成报告.md  Phase2_完成报告.md  Phase3_完成报告.md  Phase4_完成报告.md  Phase5_完成报告.md  Phase6_完成报告.md  Phase7_完成报告.md  Phase8_完成报告.md  REFACTORING_ANALYSIS.md  TODO-implementation-report.md  TROUBLESHOOTING.md  USER_GUIDE.md  error-handling-improvements.md  ipmsg-rs参考实现分析.md  参考实现分析完成报告.md
docs/tasks/: TASK_1.1_COMPLETION_REPORT.md  TASK_1.1_SPLIT_MAIN_RS.md  TASK_1.3_1.4_COMPLETION_REPORT.md  TASK_10_COMPLETION_REPORT.md  TASK_11_COMPLETION_REPORT.md  TASK_12_COMPLETION_REPORT.md  TASK_5_COMPLETION_REPORT.md  TASK_6_COMPLETION_REPORT.md  TASK_6_SPLIT_MAIN_LAYOUT.md  TASK_7_COMPLETION_REPORT.md  TASK_8_COMPLETION_REPORT.md  TASK_9_COMPLETION_REPORT.md
reference/constants/: feiq_protocol.rs
reference/event/: bus.rs  model.rs
reference/network/feiq/: parser.rs
releases/: BUILD_REPORT.md
releases/飞秋通讯.app/Contents/: Info.plist
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icon.py  create_icon_pil.py
src-tauri/migrations/src/: lib.rs  m20250127_000002_create_contact_table.rs  m20250127_000003_create_group_tables.rs  m20250127_000004_create_chat_tables.rs  m20250127_000005_create_file_storage_table.rs  mod.rs
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/app/: commands.rs  init.rs  mod.rs  setup.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/chat/: manager.rs  mod.rs  receipt.rs  receiver.rs  sender.rs  service.rs
src-tauri/src/core/contact/: discovery.rs  mod.rs  service.rs
src-tauri/src/core/file/: handler.rs  mod.rs  request.rs  resume.rs  service.rs  transfer.rs
src-tauri/src/core/group/: broadcast.rs  mod.rs  service.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/handler/: chat.rs  contact.rs  file.rs  group.rs  mod.rs  transfer_state.rs  user.rs
src-tauri/src/database/migration/: m20250127_000001_create_user_table.rs  m20250127_000002_create_contact_table.rs  m20250127_000003_create_group_tables.rs  m20250127_000004_create_chat_tables.rs  m20250127_000005_create_file_storage_table.rs  m20250129_000006_create_transfer_state_table.rs  mod.rs
src-tauri/src/database/migration.bak/: m20250127_000001_create_user_table.rs  mod.rs
src-tauri/src/database/model/: chat_message.rs  chat_session.rs  contact.rs  file_storage.rs  group.rs  group_member.rs  mod.rs  transfer_state.rs  user.rs
src-tauri/src/event/: bus.rs  handlers.rs  mod.rs  model.rs
src-tauri/src/ipc/: chat.rs  contact.rs  file.rs  group.rs  mod.rs  user.rs
src-tauri/src/network/: mod.rs
src-tauri/src/network/feiq/: constants.rs  mod.rs  model.rs  packer.rs  parser copy.rs  parser.rs  utils.rs
src-tauri/src/network/udp/: mod.rs  receiver.rs  sender.rs  socket.rs
src-tauri/src/network/utils/: mod.rs  subnet.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/utils/serde/: mod.rs
src-tauri/src/utils/snowflake/: mod.rs
src-tauri/tests/: integration_tests.rs
src/components/: AddMemberDialog.less  AddMemberDialog.tsx  CreateGroupDialog.less  CreateGroupDialog.tsx  GroupChatWindow.less  GroupChatWindow.tsx  GroupList.less  GroupList.tsx  GroupSettingsDialog.less  GroupSettingsDialog.tsx
src/components/ChatWindow/: ChatWindow.less  ChatWindow.tsx  MessageInput.less  MessageInput.tsx  MessageItem.less  MessageItem.tsx  MessageList.less  MessageList.tsx
src/components/Contact/: ContactGroup.less  ContactGroup.tsx  ContactItem.less  ContactItem.tsx  ContactList.less  ContactList.tsx  ContactSearch.less  ContactSearch.tsx
src/components/EmojiPicker/: EmojiPicker.less  EmojiPicker.tsx
src/components/FileProgress/: FileProgress.less  FileProgress.tsx  index.ts
src/components/FileUpload/: FileUpload.less  FileUpload.tsx
src/components/MainLayout/: MainLayout.less  MainLayout.tsx
src/components/SessionList/: SessionList.less  SessionList.tsx
src/components/Toast/: Toast.less  Toast.tsx
src/hooks/: useChat.ts  useContact.ts  useFileTransfer.ts  useIPC.ts  useUser.ts
src/hooks/__tests__/: useChat.test.ts  (+2 more)
src/ipc/: chat.ts  contact.ts  file.ts  group.ts  index.ts
src/services/: chatService.ts  contactService.ts  groupService.ts  index.ts
src/store/: chatStore.ts  groupStore.ts  index.ts  toastStore.ts  userStore.ts
src/styles/: global.less  mixins.less  variables.less
src/test/: setup.ts
src/types/: chat.ts  index.ts  user.ts
src/utils/: emoji.ts  error.ts  file.ts  path.ts  time.ts
(+6 files in other folders)
