[package]
name = "feiqiu-communication"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "内网通讯软件 - 基于 Tauri 2.0 + IPMsg 协议"
license = "MIT"
repository = "https://github.com/yourusername/feiqiu_demo_1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# ============================================================
# 核心框架
# ============================================================
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================================
# 异步运行时
# ============================================================
tokio = { version = "1.35", features = [
    "full",
    "tracing",
    "net",
    "io-util",
    "fs",
    "time",
    "rt-multi-thread",
] }

# ============================================================
# 数据库
# ============================================================
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "debug-print",
] }

# ============================================================
# 协议解析（基于 ipmsg-rs 参考实现）
# ============================================================
combine = "4.6"              # 解析器组合子库

# ============================================================
# 并发与事件（基于 ipmsg-rs 参考实现）
# ============================================================
crossbeam-channel = "0.5"     # 高性能无锁多线程通道
once_cell = "1.19"            # 线程安全的延迟初始化

# ============================================================
# 编码处理（可选 - 兼容 GB18030）
# ============================================================
encoding = { version = "0.2", optional = true }  # 字符编码转换

# ============================================================
# 日志与追踪
# ============================================================
tracing = "0.1"               # 结构化日志框架
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "chrono",
] }
tracing-appender = "0.2"      # 日志文件输出

# ============================================================
# 错误处理
# ============================================================
anyhow = "1.0"                # 通用错误处理
thiserror = "1.0"              # 派生错误类型

# ============================================================
# 时间处理
# ============================================================
chrono = { version = "0.4", features = ["serde"] }

# ============================================================
# 工具库
# ============================================================
# 雪花算法生成器（可选）
# snowflake = "0.1"

# 本地 IP 地址获取
local-ip-address = "0.5"

# 主机名获取
hostname = "0.3"

# ============================================================
# 文件处理
# ============================================================
# 文件路径处理
path-clean = "0.1"

# MIME 类型检测
mime_guess = "2.0"

# ============================================================
# 测试（开发依赖）
# ============================================================
[dev-dependencies]
criterion = "0.5"             # 性能基准测试
quickcheck = "1.0"            # 属性测试
proptest = "1.0"              # 模糊测试

# ============================================================
# 特性配置
# ============================================================
[features]
# 默认特性
default = ["all"]

# 完整功能
all = [
    "encryption",
    "gb18030",
    "tracing-json",
]

# 加密支持（可选）
encryption = []

# GB18030 编码支持（可选）
gb18030 = ["encoding"]

# JSON 日志格式（可选）
tracing-json = ["tracing-subscriber/json"]

# 开发调试
dev = [
    "tracing-json",
]

# 生产构建
production = []

# ============================================================
# 配置文件
# ============================================================
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0                # 开发时不优化
debug = true                 # 包含调试信息
overflow-checks = true       # 启用溢出检查
lto = false                  # 不使用链接时优化

[profile.dev.package."*"]    # 优化依赖项
opt-level = 2

[profile.release]
opt-level = 3                # 最高优化
debug = false                # 不包含调试信息
overflow-checks = false      # 禁用溢出检查（生产）
lto = "fat"                  # 链接时优化
codegen-units = 1            # 单个代码生成单元（最大优化）
strip = true                 # 移除符号表
panic = "abort"              # 生产时 panic 直接 abort

[profile.release-debug]
inherits = "release"
debug = true                 # 包含调试信息的 release 构建
strip = false

# ============================================================
# Tauri 配置
# ============================================================
# https://tauri.app/v1/api/config
[workspace.dependencies]
tauri = { version = "2.0", default-features = false, features = [
    "tray-icon",
    "macos-private-api",
] }
