[package]
name = "feiqiu-communication"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "内网通讯软件 - 基于 Tauri 2.0 + IPMsg 协议"
license = "MIT"
repository = "https://github.com/yourusername/feiqiu_demo_1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# ============================================================
# 核心框架
# ============================================================
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================================
# 异步运行时
# ============================================================
tokio = { version = "1.35", features = [
    "full",
    "tracing",
    "net",
    "io-util",
    "fs",
    "time",
    "rt-multi-thread",
] }

# ============================================================
# 数据库
# ============================================================
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "debug-print",
] }
sea-orm-migration = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
async-trait = "0.1"

# ============================================================
# 协议解析（基于 ipmsg-rs 参考实现）
# ============================================================
combine = "4.6"              # 解析器组合子库

# ============================================================
# 并发与事件（基于 ipmsg-rs 参考实现）
# ============================================================
crossbeam-channel = "0.5"     # 高性能无锁多线程通道
once_cell = "1.19"            # 线程安全的延迟初始化

# ============================================================
# 编码处理（可选 - 兼容 GB18030）
# ============================================================
encoding = { version = "0.2", optional = true }  # 字符编码转换

# ============================================================
# 日志与追踪
# ============================================================
tracing = "0.1"               # 结构化日志框架
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "chrono",
] }
tracing-appender = "0.2"      # 日志文件输出

# ============================================================
# 错误处理
# ============================================================
anyhow = "1.0"                # 通用错误处理
thiserror = "1.0"              # 派生错误类型

# ============================================================
# 时间处理
# ============================================================
chrono = { version = "0.4", features = ["serde"] }

# ============================================================
# 工具库
# ============================================================
# 雪花算法生成器（可选）
# snowflake = "0.1"

# 本地 IP 地址获取
local-ip-address = "0.5"

# 主机名获取
hostname = "0.3"

# ============================================================
# 文件处理
# ============================================================
# 文件路径处理
path-clean = "0.1"

# MIME 类型检测
mime_guess = "2.0"

# Base64 编码（用于文件传输）
base64 = "0.22"

# SHA256 校验和（用于文件完整性验证）
sha2 = "0.10"

# ============================================================
# 测试（开发依赖）
# ============================================================
[dev-dependencies]
criterion = "0.5"             # 性能基准测试
quickcheck = "1.0"            # 属性测试
proptest = "1.0"              # 模糊测试

# ============================================================
# 特性配置
# ============================================================
[features]
# 默认特性
default = ["all"]

# 完整功能
all = [
    "encryption",
    "gb18030",
    "tracing-json",
]

# 加密支持（可选）
encryption = []

# GB18030 编码支持（可选）
gb18030 = ["encoding"]

# JSON 日志格式（可选）
tracing-json = ["tracing-subscriber/json"]

# 开发调试
dev = [
    "tracing-json",
]

# 生产构建
production = []

